# proteus-author

./: .eslintignore  .gitignore  .oxfmtrc.json  .yarnrc.yml  AGENTS.md  EFFECT_METERING_GUIDELINES.md  FIRST_PAINT.md  README.md  STARTUP.md  STYLE_GUIDE.md  biome.json  bump-version.ts  cliff.toml  eslint.config.mjs  ffmpeg-thoughts.md  index.html  new-project.json  package.json  permissions.txt  project.json  settings.json  test.json  test.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-ffmpeg.yml  release.yml
.zed/: settings.json
SUPPORT_TICKETS/: ST-01-demo-ticket.md  ST-02-project-structure-review.md  ST-03-bin-mute-solo-controls.md  ST-04-effect-specific-dialogs-and-visual-feedback.md  index.md
config/: electron-builder.json
dev-assets/: icon.ai
ffmpeg/small/: build-instructions.md  ffmpeg-aarch64-apple-darwin  ffmpeg-x86_64-apple-darwin  ffmpeg-x86_64-unknown-linux-gnu  proteus-author-ffmpeg-aarch64-apple-darwin  proteus-author-ffmpeg-aarch64-unknown-linux-gnu  proteus-author-ffmpeg-x86_64-apple-darwin
planning/: FIRST_PAINT.md  STARTUP.md
resources/: icon.icns
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/src/: alerts.rs  effects.rs  file.rs  helpers.rs  main.rs  menu.rs  peaks.rs  player.rs  player_runtime.rs  project.rs  startup.rs  test.json  test.rs  test2.json  windows.rs
src-tauri/src/file/: export.rs  project_io.rs  registry.rs  types.rs  utils.rs  waveform.rs
src-tauri/src/player/: api.rs  commands.rs  mix.rs  runtime.rs  types.rs
src/assets/: analog.css  effects.ts  fonts.css  index.css  system.ts  theme.css  toneMaster.ts  tools.ts
src/classes/: system.ts  tone.ts
src/components/: GreetTauri.vue
src/components/analog/: AnalogButton.vue  AnalogDemoPanel.vue  AnalogIndicator.vue  AnalogKnob.vue  AnalogToggle.vue  index.ts
src/components/base/: BaseAlertBox.vue  BaseContainer.vue  BaseLevelMeter.vue  BaseLoadingSpinner.vue  BaseTitle.vue  BaseTransport.vue
src/components/digital/: DigitalFader.vue  DigitalIndicator.vue  DigitalPot.vue  DigitalTrackMix.vue  index.ts
src/components/effects/: EffectDialog.vue  EffectDialogCompressor.vue  EffectDialogReverb.vue  EffectMini.vue  EffectRack.vue  EffectsDialog.vue
src/components/input/: InputAutoSizedText.vue
src/components/playground/: PlaygroundFirst.vue  PlaygroundSecond.vue
src/components/track/: TrackBin.vue  TrackWaveform.vue  TrackWaveformLegacy.vue
src/components/util/: UtilBase.vue  UtilKeyStrokes.vue  UtilLoad.vue  UtilSave.vue  UtilSaveAs.vue
src/composables/: useAppShortcuts.ts
src/main/: .eslintrc.js  main.ts  preload.ts  tsconfig.json
src/main/static/: fileOptions.ts  global.ts  proteusMenu.ts  tools.ts  typings.ts
src/renderer/: .eslintrc.js  App.vue  electron.ts  index.html  main.ts  tsconfig.json
src/renderer/classes/: clock.ts  tone.ts
src/renderer/components/: Hello.vue  Hello2.vue
src/renderer/components/base/: BaseAlertBox.vue  BaseContainer.vue  BaseTitle.vue  BaseTransport.vue
src/renderer/components/effects/: EffectCompressor.vue  EffectDialogCompressor.vue  EffectDialogReverb.vue  EffectMini.vue  EffectRack.vue
src/renderer/components/input/: InputAutoSizedText.vue
src/renderer/components/playground/: PlaygroundFirst.vue  PlaygroundSecond.vue
src/renderer/components/track/: TrackBin.vue  TrackPlayhead.vue  TrackWaveform.vue
src/renderer/components/util/: Util.vue  UtilKeyStrokes.vue  UtilLoad.vue  UtilSave.vue  UtilSaveAs.vue
src/renderer/public/: effects.ts  index.css  playmaster.ts  theme.css  toneMaster.ts  tools.ts
src/renderer/stores/: alerts.ts  audio.ts  head.ts  proteus.ts  proteus_object.ts  tracks.ts
src/renderer/typings/: clock.ts  effects.d.ts  electron.d.ts  playMaster.ts  proteus.d.ts  tone.d.ts  tone.ts  tracks.d.ts  transport.d.ts
src/stores/: alerts.ts  audio.ts  head.ts  menu.ts  track.ts  window.ts
src/typings/: effects.d.ts  electron.d.ts  playMaster.ts  proteus.d.ts  tone.d.ts  tracks.d.ts  transport.d.ts
src/utils/: menu.ts  startup-trace.ts
