[package]
name = "proteus-author-tauri"
version = "0.8.1"
description = "A Tauri App"
authors = ["Adam Thomas Howard"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "devtools"] }
# tauri = { version = "1.5", features = ["api-all"] }
once_cell = "1.18.0"
# proteus_audio = "0.2.6"
# proteus_audio = { path = "/Users/innocentsmith/Dev/rust/proteus-cli" }
proteus-lib = { path = "/Users/innocentsmith/Dev/rust/proteus/proteus-lib", version = "0.4.0" }
uuid = { version = "1.6.1", features = ["v4"] }
regex = "1.5"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
# tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
dotenv = "0.15.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
